# datarobot-agent-skills-fork

./: Taskfile.yaml  pyproject.toml
.github/workflows/: test-skills-e2e.yml
tests/e2e/: test_skills_e2e.py
